# DEEPLEARNING_CLASSIFIER_TEMPLATE

./: LICENSE  README.md  init_setup.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
research/: trials.ipynb
