[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7    

[options.extras_require]
testing =
    pytest>=7.1.3      #to run integration test and unit test
    mypy>=0.971        #to check any typing error
    flake8>=5.0.4      #to check any mistakes ex: extra space..
    tox>=3.25.1        #to create different working environment and 
    black>=22.8.0      #for formatting the standard python structure

[options.package_data]
deepClassifier = py.typed   # to ignore any pakage error
  
[flake8]
max-line-length = 160     
exclude = __init__.py